# algolabra

./: .coverage  .coveragerc  .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: app.py  main.py
src/services/: eigenfaces.py  formulas.py  helper.py  utils.py
src/templates/: eigenfaces.html  guess.html  index.html  layout.html  mean.html  not_recognised.html
src/tests/: eigenfaces_test.py  formulas_test.py  utils_test.py
